# src/modules/notifications/dto/notifications.dto.ts
@@ -1,0 +1,43 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+import { Type } from 'class-transformer';
+import {
+  IsOptional,
+  IsNumber,
+  Min,
+  Max,
+  IsEnum,
+  IsBoolean,
+} from 'class-validator';
+
+export class GetNotificationsQueryDto {
+  @ApiPropertyOptional({ default: 20, minimum: 1, maximum: 100 })
+  @IsOptional()
+  @IsNumber()
+  @Min(1)
+  @Max(100)
+  @Type(() => Number)
+  take?: number = 20;
+
+  @ApiPropertyOptional({ default: 0, minimum: 0 })
+  @IsOptional()
+  @IsNumber()
+  @Min(0)
+  @Type(() => Number)
+  skip?: number = 0;
+
+  @ApiPropertyOptional({
+    description:
+      'Optional filter by notification category, 0 for User, 1 for System, 2 for Trading',
+    enum: [0, 1, 2],
+  })
+  @IsOptional()
+  @Type(() => Number)
+  @IsEnum([0, 1, 2])
+  category?: number;
+
+  @ApiPropertyOptional({ description: 'Optional filter by read status' })
+  @IsOptional()
+  @IsBoolean()
+  @Type(() => Boolean)
+  isRead?: boolean;
+}
